# assignment-docx-filler

./: .gitignore  CONTEXT.md  DESIGN.md  README.md  SKILL.md  pyproject.toml  requirements.txt
agents/: openai.yaml
docs/adr/: 0001-use-docx-native-word-validation.md  0002-pdf-is-fallback-only.md
references/: docx-fidelity.md  template-analysis-checklist.md  word-export.md
scripts/: __init__.py  analyze_template.py  build_submission.py  fill_assignment.py  map_materials.py  render_word.ps1  validate_submission.py
scripts/assignment_docx_filler/: __init__.py  analyze.py  build.py  common.py  docx_ops.py  errors.py  materials.py  pdf_ops.py  pipeline.py  validation.py
tests/: conftest.py  test_analyze_template.py  test_build_submission.py  test_map_materials.py  test_pipeline.py  test_validate_submission.py
