[project]
name = "assignment-docx-filler"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "lxml>=5.0",
  "Pillow>=10.0",
  "PyMuPDF>=1.24",
  "python-docx>=1.1",
  "pywin32>=306; platform_system == 'Windows'",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

